<resources>
    <string name="app_name">task3</string>
    <string name="full_name">Full Name</string>
    <string name="possworld">Possworld</string>
    <string name="welcome_in_our_app">Welcome in our app</string>
    <string name="forget_possworld">FORGET POSSWORLD</string>
    <string name="remember_me">Remember ME</string>
    <string name="regestre_know">Regestre Know</string>
    <string name="mail">Mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirmer_possworld">Confirmer possworld</string>
    <string name="save">Save</string>
</resources>